--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "bcryptjs": "^3.0.2"
+    "@tailwindcss/vite": "^4.1.5",
+    "bcryptjs": "^3.0.2",
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^4.1.5"
   }
 }
